--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -3,10 +3,10 @@
     <script type="text/javascript" charset="utf-8">
       (function() {
         var param = {
-          url: 'http://www.fangr.tk{{ page.url }}',
+          url: 'http://happyze.github.io{{ page.url }}',
           type: '6',
           title: '《{{ page.title }}》' + '- {{ page.description }}',
-          ralateUid: '1801703902',
+          ralateUid: '13292301817',
           rnd: new Date().valueOf()
         }
         var temp = [];
