--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
 <body>
   <div class="home-menu">
     <div class="home-icon-con">
-      <a class="home-menu-icon" href="/">Fong Ray</a>
+      <a class="home-menu-icon" href="/">happyze</a>
       <a class="home-follow" href="#" title="Contact Me">+</a>
     </div>
     <div class="home-contact">
