--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,13 +18,13 @@
   <div class="home-menu">
     <div class="home-icon-con">
       <a class="home-menu-icon" href="/">happyze</a>
-      <a class="home-follow" href="#" title="Contact Me">+</a>
+      <!-- <a class="home-follow" href="#" title="Contact Me">+</a> -->
     </div>
-    <div class="home-contact">
+    <!-- <div class="home-contact">
       <a href="http://weibo.com/fr9166" target="_blank"><img src="http://o86qmsuit.bkt.clouddn.com/image/weibo.ico" alt="" width="25" /></a>
       <a href="https://www.zhihu.com/people/crazycoder" target="_blank"><img src="http://o86qmsuit.bkt.clouddn.com/image/zhihu.ico" alt="" width="25" /></a>
       <a href="https://github.com/FongRay" target="_blank"><img src="http://o86qmsuit.bkt.clouddn.com/image/github_logo.png" alt="" width="25" /></a>
-    </div>
+    </div> -->
   </div>
 
   {{ content }}
