--- a/_includes/style.css
+++ b/_includes/style.css
@@ -398,7 +398,7 @@ pre ol {
 }
 
 .coding .aside {
-  background-image: url(../images/timg.jpg);
+  background-image: url(../images/1.jpg);
 }
 
 .life .aside {
