--- a/_includes/style.css
+++ b/_includes/style.css
@@ -398,7 +398,7 @@ pre ol {
 }
 
 .coding .aside {
-  background-image: url(../images/1.jpg);
+  background-image: url(http://o86qmsuit.bkt.clouddn.com/image/coding_background.jpeg);
 }
 
 .life .aside {
